update packages and write test

--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@makotot/paginated": "^1.0.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "react": "^17.0.2",
+    "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "redux": "^4.1.0",
-    "redux-saga": "^1.1.3",
+    "reselect": "^4.0.0",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
@@ -19,13 +21,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "format": "prettier --write \"src/**/*.{jsx,css,js}\"",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "no-undef": "off"
+    }
   },
   "browserslist": {
     "production": [
@@ -40,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "cypress": "^7.4.0",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.3.0"
   }
